@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2001-2004 Sistina Software, Inc. All rights reserved.  
- * Copyright (C) 2004-2007 Red Hat, Inc. All rights reserved.
+ * Copyright (C, 0) 2001-2004 Sistina Software, Inc. All rights reserved.  
+ * Copyright (C, 0) 2004-2007 Red Hat, Inc. All rights reserved.
  *
  * This file is part of LVM2.
  *
@@ -18,114 +18,114 @@
  * corresponding short option first ...
  */
 /* *INDENT-OFF* */
-arg(version_ARG, '\0', "version", NULL)
-arg(quiet_ARG, '\0', "quiet", NULL)
-arg(physicalvolumesize_ARG, '\0', "setphysicalvolumesize", size_mb_arg)
-arg(ignorelockingfailure_ARG, '\0', "ignorelockingfailure", NULL)
-arg(nolocking_ARG, '\0', "nolocking", NULL)
-arg(metadatacopies_ARG, '\0', "metadatacopies", int_arg)
-arg(metadatasize_ARG, '\0', "metadatasize", size_mb_arg)
-arg(restorefile_ARG, '\0', "restorefile", string_arg)
-arg(labelsector_ARG, '\0', "labelsector", int_arg)
-arg(driverloaded_ARG, '\0', "driverloaded", yes_no_arg)
-arg(aligned_ARG, '\0', "aligned", NULL)
-arg(unbuffered_ARG, '\0', "unbuffered", NULL)
-arg(noheadings_ARG, '\0', "noheadings", NULL)
-arg(segments_ARG, '\0', "segments", NULL)
-arg(units_ARG, '\0', "units", string_arg)
-arg(nosuffix_ARG, '\0', "nosuffix", NULL)
-arg(removemissing_ARG, '\0', "removemissing", NULL)
-arg(abort_ARG, '\0', "abort", NULL)
-arg(addtag_ARG, '\0', "addtag", tag_arg)
-arg(deltag_ARG, '\0', "deltag", tag_arg)
-arg(refresh_ARG, '\0', "refresh", NULL)
-arg(mknodes_ARG, '\0', "mknodes", NULL)
-arg(minor_ARG, '\0', "minor", minor_arg)
-arg(type_ARG, '\0', "type", segtype_arg)
-arg(alloc_ARG, '\0', "alloc", alloc_arg)
-arg(separator_ARG, '\0', "separator", string_arg)
-arg(mirrorsonly_ARG, '\0', "mirrorsonly", NULL)
-arg(nosync_ARG, '\0', "nosync", NULL)
-arg(resync_ARG, '\0', "resync", NULL)
-arg(corelog_ARG, '\0', "corelog", NULL)
-arg(mirrorlog_ARG, '\0', "log", string_arg)
-arg(monitor_ARG, '\0', "monitor", yes_no_arg)
-arg(config_ARG, '\0', "config", string_arg)
-arg(trustcache_ARG, '\0', "trustcache", NULL)
-arg(ignoremonitoring_ARG, '\0', "ignoremonitoring", NULL)
+arg(version_ARG, '\0', "version", NULL, 0)
+arg(quiet_ARG, '\0', "quiet", NULL, 0)
+arg(physicalvolumesize_ARG, '\0', "setphysicalvolumesize", size_mb_arg, 0)
+arg(ignorelockingfailure_ARG, '\0', "ignorelockingfailure", NULL, 0)
+arg(nolocking_ARG, '\0', "nolocking", NULL, 0)
+arg(metadatacopies_ARG, '\0', "metadatacopies", int_arg, 0)
+arg(metadatasize_ARG, '\0', "metadatasize", size_mb_arg, 0)
+arg(restorefile_ARG, '\0', "restorefile", string_arg, 0)
+arg(labelsector_ARG, '\0', "labelsector", int_arg, 0)
+arg(driverloaded_ARG, '\0', "driverloaded", yes_no_arg, 0)
+arg(aligned_ARG, '\0', "aligned", NULL, 0)
+arg(unbuffered_ARG, '\0', "unbuffered", NULL, 0)
+arg(noheadings_ARG, '\0', "noheadings", NULL, 0)
+arg(segments_ARG, '\0', "segments", NULL, 0)
+arg(units_ARG, '\0', "units", string_arg, 0)
+arg(nosuffix_ARG, '\0', "nosuffix", NULL, 0)
+arg(removemissing_ARG, '\0', "removemissing", NULL, 0)
+arg(abort_ARG, '\0', "abort", NULL, 0)
+arg(addtag_ARG, '\0', "addtag", tag_arg, 0)
+arg(deltag_ARG, '\0', "deltag", tag_arg, 0)
+arg(refresh_ARG, '\0', "refresh", NULL, 0)
+arg(mknodes_ARG, '\0', "mknodes", NULL, 0)
+arg(minor_ARG, '\0', "minor", minor_arg, 0)
+arg(type_ARG, '\0', "type", segtype_arg, 0)
+arg(alloc_ARG, '\0', "alloc", alloc_arg, 0)
+arg(separator_ARG, '\0', "separator", string_arg, 0)
+arg(mirrorsonly_ARG, '\0', "mirrorsonly", NULL, 0)
+arg(nosync_ARG, '\0', "nosync", NULL, 0)
+arg(resync_ARG, '\0', "resync", NULL, 0)
+arg(corelog_ARG, '\0', "corelog", NULL, 0)
+arg(mirrorlog_ARG, '\0', "mirrorlog", string_arg, 0)
+arg(monitor_ARG, '\0', "monitor", yes_no_arg, 0)
+arg(config_ARG, '\0', "config", string_arg, 0)
+arg(trustcache_ARG, '\0', "trustcache", NULL, 0)
+arg(ignoremonitoring_ARG, '\0', "ignoremonitoring", NULL, 0)
 
 /* Allow some variations */
-arg(resizable_ARG, '\0', "resizable", yes_no_arg)
-arg(allocation_ARG, '\0', "allocation", yes_no_arg)
+arg(resizable_ARG, '\0', "resizable", yes_no_arg, 0)
+arg(allocation_ARG, '\0', "allocation", yes_no_arg, 0)
 
 /*
  * ... and now the short args.
  */
-arg(available_ARG, 'a', "available", yes_no_excl_arg)
-arg(all_ARG, 'a', "all", NULL)
-arg(autobackup_ARG, 'A', "autobackup", yes_no_arg)
-arg(activevolumegroups_ARG, 'A', "activevolumegroups", NULL)
-arg(background_ARG, 'b', "background", NULL)
-arg(blockdevice_ARG, 'b', "blockdevice", NULL)
-arg(chunksize_ARG, 'c', "chunksize", size_kb_arg)
-arg(clustered_ARG, 'c', "clustered", yes_no_arg)
-arg(colon_ARG, 'c', "colon", NULL)
-arg(columns_ARG, 'C', "columns", NULL)
-arg(contiguous_ARG, 'C', "contiguous", yes_no_arg)
-arg(debug_ARG, 'd', "debug", NULL)
-arg(disk_ARG, 'D', "disk", NULL)
-arg(exported_ARG, 'e', "exported", NULL)
-arg(physicalextent_ARG, 'E', "physicalextent", NULL)
-arg(file_ARG, 'f', "file", string_arg)
-arg(force_ARG, 'f', "force", NULL)
-arg(full_ARG, 'f', "full", NULL)
-arg(help_ARG, 'h', "help", NULL)
-arg(help2_ARG, '?', "", NULL)
-arg(stripesize_ARG, 'I', "stripesize", size_kb_arg)
-arg(stripes_ARG, 'i', "stripes", int_arg)
-arg(interval_ARG, 'i', "interval", int_arg)
-arg(iop_version_ARG, 'i', "iop_version", NULL)
-arg(logicalvolume_ARG, 'l', "logicalvolume", int_arg)
-arg(maxlogicalvolumes_ARG, 'l', "maxlogicalvolumes", int_arg)
-arg(extents_ARG, 'l', "extents", int_arg_with_sign_and_percent)
-arg(lvmpartition_ARG, 'l', "lvmpartition", NULL)
-arg(list_ARG, 'l', "list", NULL)
-arg(size_ARG, 'L', "size", size_mb_arg)
-arg(logicalextent_ARG, 'L', "logicalextent", int_arg_with_sign)
-arg(persistent_ARG, 'M', "persistent", yes_no_arg)
-arg(major_ARG, 'j', "major", major_arg)
-arg(mirrors_ARG, 'm', "mirrors", int_arg_with_sign)
-arg(metadatatype_ARG, 'M', "metadatatype", metadatatype_arg)
-arg(maps_ARG, 'm', "maps", NULL)
-arg(name_ARG, 'n', "name", string_arg)
-arg(oldpath_ARG, 'n', "oldpath", NULL)
-arg(nofsck_ARG, 'n', "nofsck", NULL)
-arg(novolumegroup_ARG, 'n', "novolumegroup", NULL)
-arg(options_ARG, 'o', "options", string_arg)
-arg(sort_ARG, 'O', "sort", string_arg)
-arg(permission_ARG, 'p', "permission", permission_arg)
-arg(maxphysicalvolumes_ARG, 'p', "maxphysicalvolumes", int_arg)
-arg(partial_ARG, 'P', "partial", NULL)
-arg(physicalvolume_ARG, 'P', "physicalvolume", NULL)
-arg(readahead_ARG, 'r', "readahead", int_arg)
-arg(resizefs_ARG, 'r', "resizefs", NULL)
-arg(reset_ARG, 'R', "reset", NULL)
-arg(regionsize_ARG, 'R', "regionsize", size_mb_arg)
-arg(physicalextentsize_ARG, 's', "physicalextentsize", size_mb_arg)
-arg(stdin_ARG, 's', "stdin", NULL)
-arg(snapshot_ARG, 's', "snapshot", NULL)
-arg(short_ARG, 's', "short", NULL)
-arg(test_ARG, 't', "test", NULL)
-arg(uuid_ARG, 'u', "uuid", NULL)
-arg(uuidstr_ARG, 'u', "uuid", string_arg)
-arg(uuidlist_ARG, 'U', "uuidlist", NULL)
-arg(verbose_ARG, 'v', "verbose", NULL)
-arg(volumegroup_ARG, 'V', "volumegroup", NULL)
-arg(allocatable_ARG, 'x', "allocatable", yes_no_arg)
-arg(resizeable_ARG, 'x', "resizeable", yes_no_arg)
-arg(yes_ARG, 'y', "yes", NULL)
-arg(zero_ARG, 'Z', "zero", yes_no_arg)
+arg(available_ARG, 'a', "available", yes_no_excl_arg, 0)
+arg(all_ARG, 'a', "all", NULL, 0)
+arg(autobackup_ARG, 'A', "autobackup", yes_no_arg, 0)
+arg(activevolumegroups_ARG, 'A', "activevolumegroups", NULL, 0)
+arg(background_ARG, 'b', "background", NULL, 0)
+arg(blockdevice_ARG, 'b', "blockdevice", NULL, 0)
+arg(chunksize_ARG, 'c', "chunksize", size_kb_arg, 0)
+arg(clustered_ARG, 'c', "clustered", yes_no_arg, 0)
+arg(colon_ARG, 'c', "colon", NULL, 0)
+arg(columns_ARG, 'C', "columns", NULL, 0)
+arg(contiguous_ARG, 'C', "contiguous", yes_no_arg, 0)
+arg(debug_ARG, 'd', "debug", NULL, ARG_REPEATABLE)
+arg(disk_ARG, 'D', "disk", NULL, 0)
+arg(exported_ARG, 'e', "exported", NULL, 0)
+arg(physicalextent_ARG, 'E', "physicalextent", NULL, 0)
+arg(file_ARG, 'f', "file", string_arg, 0)
+arg(force_ARG, 'f', "force", NULL, ARG_REPEATABLE)
+arg(full_ARG, 'f', "full", NULL, 0)
+arg(help_ARG, 'h', "help", NULL, 0)
+arg(help2_ARG, '?', "", NULL, 0)
+arg(stripesize_ARG, 'I', "stripesize", size_kb_arg, 0)
+arg(stripes_ARG, 'i', "stripes", int_arg, 0)
+arg(interval_ARG, 'i', "interval", int_arg, 0)
+arg(iop_version_ARG, 'i', "iop_version", NULL, 0)
+arg(logicalvolume_ARG, 'l', "logicalvolume", int_arg, 0)
+arg(maxlogicalvolumes_ARG, 'l', "maxlogicalvolumes", int_arg, 0)
+arg(extents_ARG, 'l', "extents", int_arg_with_sign_and_percent, 0)
+arg(lvmpartition_ARG, 'l', "lvmpartition", NULL, 0)
+arg(list_ARG, 'l', "list", NULL, 0)
+arg(size_ARG, 'L', "size", size_mb_arg, 0)
+arg(logicalextent_ARG, 'L', "logicalextent", int_arg_with_sign, 0)
+arg(persistent_ARG, 'M', "persistent", yes_no_arg, 0)
+arg(major_ARG, 'j', "major", major_arg, 0)
+arg(mirrors_ARG, 'm', "mirrors", int_arg_with_sign, 0)
+arg(metadatatype_ARG, 'M', "metadatatype", metadatatype_arg, 0)
+arg(maps_ARG, 'm', "maps", NULL, 0)
+arg(name_ARG, 'n', "name", string_arg, 0)
+arg(oldpath_ARG, 'n', "oldpath", NULL, 0)
+arg(nofsck_ARG, 'n', "nofsck", NULL, 0)
+arg(novolumegroup_ARG, 'n', "novolumegroup", NULL, 0)
+arg(options_ARG, 'o', "options", string_arg, 0)
+arg(sort_ARG, 'O', "sort", string_arg, 0)
+arg(permission_ARG, 'p', "permission", permission_arg, 0)
+arg(maxphysicalvolumes_ARG, 'p', "maxphysicalvolumes", int_arg, 0)
+arg(partial_ARG, 'P', "partial", NULL, 0)
+arg(physicalvolume_ARG, 'P', "physicalvolume", NULL, 0)
+arg(readahead_ARG, 'r', "readahead", int_arg, 0)
+arg(resizefs_ARG, 'r', "resizefs", NULL, 0)
+arg(reset_ARG, 'R', "reset", NULL, 0)
+arg(regionsize_ARG, 'R', "regionsize", size_mb_arg, 0)
+arg(physicalextentsize_ARG, 's', "physicalextentsize", size_mb_arg, 0)
+arg(stdin_ARG, 's', "stdin", NULL, 0)
+arg(snapshot_ARG, 's', "snapshot", NULL, 0)
+arg(short_ARG, 's', "short", NULL, 0)
+arg(test_ARG, 't', "test", NULL, 0)
+arg(uuid_ARG, 'u', "uuid", NULL, 0)
+arg(uuidstr_ARG, 'u', "uuid", string_arg, 0)
+arg(uuidlist_ARG, 'U', "uuidlist", NULL, 0)
+arg(verbose_ARG, 'v', "verbose", NULL, ARG_REPEATABLE)
+arg(volumegroup_ARG, 'V', "volumegroup", NULL, 0)
+arg(allocatable_ARG, 'x', "allocatable", yes_no_arg, 0)
+arg(resizeable_ARG, 'x', "resizeable", yes_no_arg, 0)
+arg(yes_ARG, 'y', "yes", NULL, 0)
+arg(zero_ARG, 'Z', "zero", yes_no_arg, 0)
 
 /* this should always be last */
-arg(ARG_COUNT, '-', "", NULL)
+arg(ARG_COUNT, '-', "", NULL, 0)
 /* *INDENT-ON* */
